--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "lucide": "^0.575.0",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
-    "react": "19.2.3",
+    "react": "^19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
