--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 
     "lucide-react": "^0.575.0",
     "next": "15.2.3",
-    "react": "^19.2.3",
+    "react": "19.2.3",
     "react-dom": "19.2.3"
   },
   "devDependencies": {
