--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
-
     "lucide": "^0.575.0",
-
     "lucide-react": "^0.575.0",
-    "next": "15.2.4",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -23,7 +21,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "^16.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
